--- a/locales/ru.json
+++ b/locales/ru.json
@@ -256,5 +256,12 @@
     "page": "Страница не найдена",
     "desc": "Похоже, нужная Вам страница была удалена/перенесена или никогда не существовала. Попробуйте найти ее в меню или вернитесь на главную страницу",
     "back": "Вернуться на главную"
+  },
+  "meta":{
+    "title": "Высоконагруженные сайты, мобильные приложения, игры, дизайн, брендинг, продвижение",
+    "description": "APPELSIN - это digital студия, занимающаяся разработкой комплексных омниканальных IT-решений.\u2028Создание самых современных сайтов, сложных высоконагруженных веб-сервисов и серверных решений, мобильных приложений и игр, дизайна и брендинга, а также реклама и продвижение.",
+    "og-title": "разработка комплексных IT-решений",
+    "og-description": "Создание современных сайтов, сложных высоконагруженных веб-сервисов и серверных решений, мобильных приложений и игр, дизайна и брендинга, а также реклама и продвижение.",
+    "og-locale": "ru_RU"
   }
 }
